tests/AST/if-mismatched-cond.bel
# RUN: %not %belalang build --emit ast %s | %FileCheck %s

if "hello" {
    1
}

# CHECK:      error: mismatched type
# CHECK-NEXT:  --> {{.*}}/tests/AST/if-mismatched-cond.bel:3:4
# CHECK-NEXT:   |
# CHECK-NEXT: 3 | if "hello" {
# CHECK-NEXT:   |    ^^^^^^^ expected type `Boolean`, found type `String`
